# debio-node

./: Cargo.toml  Dockerfile  chain-spec-local-raw.json  chain-spec-local.json  chain-spec-octopus-raw.json  chain-spec-octopus.json  chain-spec-raw.json  chain-spec.json
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/certifications/: Cargo.toml
pallets/certifications/src/: interface.rs  lib.rs
pallets/doctor-certifications/: Cargo.toml
pallets/doctor-certifications/src/: interface.rs  lib.rs
pallets/doctors/: Cargo.toml
pallets/doctors/src/: interface.rs  lib.rs
pallets/electronic-medical-record/: Cargo.toml
pallets/electronic-medical-record/src/: interface.rs  lib.rs
pallets/genetic-testing/: Cargo.toml
pallets/genetic-testing/src/: interface.rs  lib.rs
pallets/hospital-certifications/: Cargo.toml
pallets/hospital-certifications/src/: interface.rs  lib.rs
pallets/hospitals/: Cargo.toml
pallets/hospitals/src/: interface.rs  lib.rs
pallets/labs/: Cargo.toml  types.json
pallets/labs/src/: interface.rs  lib.rs
pallets/orders/: Cargo.toml  types.json
pallets/orders/src/: interface.rs  lib.rs
pallets/services/: Cargo.toml  types.json
pallets/services/src/: interface.rs  lib.rs
pallets/user-profile/: Cargo.toml
pallets/user-profile/src/: interface.rs  lib.rs
resources/: mainnet.json  testnet.json
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/multi-node-local/: reset-storage.sh  start-node-1.sh  start-node-2.sh  start-node-3.sh  start-node-4.sh
traits/certifications/: Cargo.toml
traits/certifications/src/: lib.rs
traits/doctor-certifications/: Cargo.toml
traits/doctor-certifications/src/: lib.rs
traits/electronic-medical-record/: Cargo.toml
traits/electronic-medical-record/src/: lib.rs
traits/escrow-controller/: Cargo.toml
traits/escrow-controller/src/: lib.rs
traits/genetic-testing/: Cargo.toml
traits/genetic-testing/src/: lib.rs
traits/hospital-certifications/: Cargo.toml
traits/hospital-certifications/src/: lib.rs
traits/order/: Cargo.toml
traits/order/src/: lib.rs
traits/services/: Cargo.toml
traits/services/src/: lib.rs
traits/user-profile/: Cargo.toml
traits/user-profile/src/: lib.rs
