[package]
authors = ['debio.network']
build = 'build.rs'
description = 'Debio standalone node'
edition = '2018'
homepage = 'https://debio.network'
license = 'Unlicense'
name = 'debio-node'
repository = 'https://github.com/Degenics/debio-node'
version = '0.1.0'

[[bin]]
name = 'debio-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
hex-literal = "0.2.1"

# Substrate dependencies
frame-benchmarking = '3.1.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-babe = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-telemetry = '3.0.0'
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-babe = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

pallet-im-online = '3.0.0'
pallet-staking = '3.0.0'
sp-keystore = '0.9.0'
sc-consensus-babe-rpc = '0.9.0'
sc-consensus-epochs = '0.9.0'
sc-finality-grandpa-rpc = '0.9.0'
sc-network = '0.9.0'
sc-consensus-slots = '0.9.0'
sc-chain-spec = '3.0.0'
sc-sync-state-rpc = '0.9.0'

# local dependencies
node-template-runtime = { path = '../runtime', version = '3.0.0' }

pallet-octopus-appchain = { git = 'https://github.com/octopus-network/pallet-octopus-appchain.git' }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']